fixed links and icon spacing

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -6,3 +6,6 @@ body {
     color: blue;
 
 }
+#footerIcons a {
+    margin-left: 10px;
+}
